# stealthscraper-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  GEMINI.md  LICENSE  README.md  SECURITY.md  codecov.yml  deny.toml  release-plz.toml  rust-toolchain.toml  sonar-project.properties
.agents/rules/: architecture.md  hooks.md  quality-standards.md
.agents/rules/common/: agents.md  code-review.md  coding-style.md
.agents/skills/rust-core/: SKILL.md
.agents/skills/stealth-researcher/: SKILL.md
.agents/workflows/: feature-cycle.md  stealth-audit.md  stealth-patch.md
.github/workflows/: bump.yml  checks.yml  ci.yml  release-plz.yml  release.yml
examples/: cloudflare_test.rs  demo.rs
src/: behavior.rs  error.rs  events.rs  geo.rs  lib.rs  profile.rs  proxy.rs  proxy_pool.rs  scraper.rs  solver.rs  stealth.rs
src/challenge/: detect.rs  mitigation.rs  mod.rs  types.rs
src/state/: mod.rs  model.rs  redb_store.rs  store.rs
tests/: e2e_bypass.rs  e2e_human_interaction.rs  e2e_stealth_validation.rs  integration_test.rs
