[package]
name = "rs-cloudscraper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
cookie_store = "0.22.1"
env_logger = "0.11.9"
headless_chrome = "1.0.21"
hex = "0.4.3"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["server"] }
hyper-util = { version = "0.1.20", features = ["server-auto", "tokio"] }
log = "0.4.29"
rand = "0.10.0"
rand_distr = "0.6.0"
rcgen = { version = "0.13.1", features = ["aws_lc_rs"] }
regex = "1.12.3"
rquest = { version = "5.1.0", features = ["full"] }
rquest-util = "2.2.1"
rustls-pki-types = "1.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-socks = "0.5.2"
tokio-tungstenite = "0.28.0"
tokio-util = { version = "0.7.18", features = ["compat"] }
