[package]
name = "rs-cloudscraper"
version = "0.2.0"
edition = "2024"
license = "MIT"

[features]
default = []
browser = ["dep:headless_chrome", "dep:tokio-tungstenite", "dep:rand_distr"]

[dependencies]
bytes = "1.11.1"
cookie_store = "0.22.1"
chrono = "0.4"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["server"] }
hyper-util = { version = "0.1.20", features = ["server-auto", "tokio"] }
log = "0.4.29"
rand = "0.10.1"
rcgen = { version = "0.14.7", features = ["aws_lc_rs"] }
regex = "1.12.3"
rquest = { version = "5.1.0", default-features = false, features = ["json", "cookies", "socks", "stream"] }
rquest-util = "2.2.1"
rustls-pki-types = "1.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "net", "time", "macros", "signal"] }
tokio-rustls = { version = "0.26.4", features = ["ring"] }
tokio-socks = "0.5.2"
tokio-util = { version = "0.7.18", features = ["compat"] }

# Optional dependencies for the 'browser' feature
headless_chrome = { version = "1.0.21", optional = true }
tokio-tungstenite = { version = "0.28.0", optional = true }
rand_distr = { version = "0.6.0", optional = true }

[dev-dependencies]
env_logger = "0.11.9"
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "socks"] }
