[package]
name = "rs-cloudscraper"
version = "0.3.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
description = "A stealthy web scraping library providing TLS JA4 fingerprint impersonation and headless browser automation."
repository = "https://github.com/ypno/rs-cloudscraper"
readme = "README.md"
keywords = ["scraping", "stealth", "tls-fingerprint", "headless-chrome", "automation"]
categories = ["web-programming::http-client", "network-programming"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "SECURITY.md",
]

[features]
default = []
browser = ["dep:headless_chrome", "dep:tokio-tungstenite", "dep:rand_distr", "dep:wreq-util"]
# Persistent (redb-backed) domain/session state store.
persistence = ["dep:redb"]

# Build docs.rs with all features so the `browser`-gated API is documented.
[package.metadata.docs.rs]
all-features = true

[dependencies]
bytes = "1.11.1"
cookie_store = "0.22.1"
chrono = "0.4"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["server"] }
hyper-util = { version = "0.1.20", features = ["server-auto", "tokio"] }
log = "0.4.29"
rand = "0.10.1"
rcgen = { version = "0.14.8", features = ["aws_lc_rs"] }
regex = "1.12.3"
wreq = { version = "5.3.0", default-features = false, features = ["json", "cookies", "socks", "stream"] }
rustls-pki-types = "1.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "time", "macros", "signal"] }
tokio-rustls = { version = "0.26.4", features = ["ring"] }
tokio-socks = "0.5.2"
tokio-util = { version = "0.7.18", features = ["compat"] }

# Optional dependencies for the 'browser' feature
headless_chrome = { version = "1.0.21", optional = true }
tokio-tungstenite = { version = "0.29.0", optional = true }
rand_distr = { version = "0.6.0", optional = true }
# GPL-3.0; only pulled in with the `browser` feature so the default build stays permissive (MIT + Apache-2.0).
wreq-util = { version = "2.2.6", optional = true }

# Optional dependency for the 'persistence' feature (pure-Rust embedded KV store).
redb = { version = "4", optional = true }

[dev-dependencies]
env_logger = "0.11.9"
mockito = "1.7.2"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "socks"] }

[[example]]
name = "demo"
required-features = ["browser"]

[[example]]
name = "cloudflare_test"
required-features = ["browser"]

[[test]]
name = "integration_test"
required-features = ["browser"]

[[test]]
name = "e2e_bypass"
required-features = ["browser"]

[[test]]
name = "e2e_human_interaction"
required-features = ["browser"]

[[test]]
name = "e2e_stealth_validation"
required-features = ["browser"]
